--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -12,6 +12,67 @@ body {
   margin: 0;
 }
 
+section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background: #042104;
+  animation: animateBg 8s linear 5s;
+}
+
+@keyframes animateBg {
+  from {
+    filter: hue-rotate(0deg);
+  }
+  to {
+    filter: hue-rotate(360deg);
+  }
+}
+
+section .loader {
+  position: relative;
+  width: 130px;
+  height: 130px;
+}
+
+section .loader span {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: rotate(calc(18deg * var(--i)));
+}
+
+section .loader span::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 17px;
+  height: 17px;
+/*  border-radius: 50%;*/
+  background: #00ff0a;
+  box-shadow: 0 0 10px #00ff0a,
+              0 0 20px #00ff0a,
+              0 0 40px #00ff0a,
+              0 0 60px #00ff0a,
+              0 0 80px #00ff0a,
+              0 0 100px #00ff0a;     
+  animation: animate 2s linear infinite;
+  animation-delay: calc(0.1s * var(--i));
+}
+
+@keyframes animate {
+  0% {
+    transform: scale(1);
+  }
+  80%, 100% {
+    transform: scale(0);
+  }
+}
+
 .myborder {
   border: 5px solid var(--blue);
   background-color: transparent;
@@ -43,6 +104,7 @@ div.game-frame {
 .game-board canvas {
   /*  border: 20px solid transparent;
 border-image: url("/images/border.png") 20% stretch;*/
+  position: relative;
   border: 10px solid;
   border-image-slice: 1;
   border-image-source: linear-gradient(315deg, #4dff03, #00d0ff);
@@ -110,7 +172,7 @@ border-image: url("/images/border.png") 20% stretch;*/
 #settingsMenu form {
   color: white;
   margin: auto;
-  width: 65%;
+  width: 75%;
   height: 35%;
 }
 
